	  messages, away states, online/offline, etc.  Huge thanks to Christian,
	  Dave West, and Daniel Atallah
	* gaim-remote can send text (John B. Silvestri)
	* Autoreconnect plugin can hide the reconnect dialog (François Gagné)
	* Screenname colors in chats now come from GNOME color palette
	* Yahoo! has the following new "/" commands:  /join, /buzz

	Preference changes:
	* Removed keyboard shortcut preferences for ctrl-b/i/u and made sure they
	  won't interfere with bindings set by the GTK theme.
	* Removed preference for buddy list button type, defaulted to "None"
	* Removed "Enter" vs. "Ctrl-Enter" to send, defaulted to "Enter" to send,
	  made it possible to change this binding in your GTK theme.
	* Removed "Show multi-colored screennames in chats," defaulted to "Yes."
	  Made screenname colors automatically adjust themselves to compensate for
	  background color.

version 1.0.2 (10/19/2004):
	Bug Fixes:
	* MSN file transfers work on big endian machines (Jean-Francois Roy and
	  Evan Schoenberg)
	* Fixed the MSN signon crash with Miranda users in the buddy list
	* Fixed sending messages to MSN Web Messenger users (Damien Ayers)
	* Fixed some memory leaks in the MSN plugin (Evan Schoenberg)
	* Fixed a crash viewing certain MSN user profiles (Evan Schoenberg)
	* Fixed a crash sending a file on MSN when the file is unreadable
	* Fixed a crash deleting accounts (Andrew Hart)
	* Fixed a crash inviting to chats (Andrew Hart)
	* Fixed a bug in Yahoo privacy handling (Peter Lawler)
	* Fixed a crash trying to join a chat from the docklet when not signed in
	  to a chat-capable account (Daniel Atallah)

version 1.0.1 (10/07/2004):
	New Features:
	* Use the GNOME default browser when opening links if you're running GNOME
	  (Alex Duggan)
	* Added support for multiple addressbooks in the gevolution plugin
	  (Henry Jen).

	Bug Fixes:
	* Send-As menu duplicates less work (Dave West)
	* Can now see your own MSN buddy icon (Felipe Contreras)